Modificación de dispoción de texto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class = 'logo' src="/imagenes/Logo.png" alt="Icono alura">
     </header>
     <main>
-        <section>
+        <section class="section-encriptador">
             <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
             <div>
                 <h6 class="informacion">Solo letras minúsculas y sin acentos</h6>
@@ -28,7 +28,7 @@
                 </button>
             </div>
         </section>
-        <section>
+        <section class="section-mensaje">
             <textarea class="mensaje" cols="20" rows="10" placeholder=""></textarea>
             <div class="copiar">
                 <button class="btn-copiar" onclick="copiarContenido()">
