--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </header>
     <main>
         <section class="section-encriptador">
-            <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+            <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aqui" oninput="this.value = this.value.toLowerCase();"></textarea>
             <div>
                 <h6 class="informacion">Solo letras minúsculas y sin acentos</h6>
             </div>
             <div class="botones">
-                <button class="btn-encriptar" onclick="btnEncriptar()">
+                <button class="btn-encriptar" onclick="validarTextoIngresado()">
                     Encriptar
                 </button>
                 <button class="btn-desencriptar" onclick="btnDesencriptar()">
@@ -29,12 +29,15 @@
             </div>
         </section>
         <section class="section-mensaje">
-            <textarea class="mensaje" cols="20" rows="10" placeholder=""></textarea>
-            <div class="copiar">
-                <button class="btn-copiar" onclick="copiarContenido()">
-                    Copiar
-                </button>
+            
+            <textarea class="mensaje" cols="1" rows="1" placeholder=""></textarea>
+            <div  class="mensaje-error">
+                <strong>Ningún mensaje fue encontrado</strong>
+                <p >Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
+            <button class="btn-copiar" onclick="copiarContenido()">
+                Copiar
+            </button>
         </section>
     </main>
     <script src="script.js"></script>
