--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class = 'logo' src="/imagenes/Logo.png" alt="Icono alura">
+        <img class = 'logo' src="imagenes/Logo.png" alt="Icono alura">
     </header>
     <main>
         <section class="section-encriptador">
